crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__struct_operator_overload_lowers_to_call.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 670
    signature_index: 0
    scopes:
      - kind: Block
        result:
          Aggregate:
            aggregate_index: 0
    locals:
      - ty:
          Aggregate:
            aggregate_index: 0
        mutability: Immutable
      - ty:
          Aggregate:
            aggregate_index: 0
        mutability: Immutable
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Call:
                  callee:
                    kind:
                      Function:
                        id: 668
                    ty:
                      Function:
                        signature_index: 0
                  arguments:
                    - kind:
                        LocalGet:
                          local_index: 0
                      ty:
                        Aggregate:
                          aggregate_index: 0
                    - kind:
                        LocalGet:
                          local_index: 1
                      ty:
                        Aggregate:
                          aggregate_index: 0
              ty:
                Aggregate:
                  aggregate_index: 0
      ty:
        Aggregate:
          aggregate_index: 0
    static_data: []
  - id: 668
    signature_index: 0
    scopes:
      - kind: Block
        result:
          Aggregate:
            aggregate_index: 0
    locals:
      - ty:
          Aggregate:
            aggregate_index: 0
        mutability: Immutable
      - ty:
          Aggregate:
            aggregate_index: 0
        mutability: Immutable
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Aggregate:
                  values:
                    - kind:
                        Add:
                          left:
                            kind:
                              AggregateGet:
                                local_index: 0
                                value_index: 0
                            ty: I32
                          right:
                            kind:
                              AggregateGet:
                                local_index: 1
                                value_index: 0
                            ty: I32
                      ty: I32
                    - kind:
                        Add:
                          left:
                            kind:
                              AggregateGet:
                                local_index: 0
                                value_index: 1
                            ty: I32
                          right:
                            kind:
                              AggregateGet:
                                local_index: 1
                                value_index: 1
                            ty: I32
                      ty: I32
              ty:
                Aggregate:
                  aggregate_index: 0
      ty:
        Aggregate:
          aggregate_index: 0
    static_data: []
signatures:
  - items:
      - Aggregate:
          aggregate_index: 0
      - Aggregate:
          aggregate_index: 0
      - Aggregate:
          aggregate_index: 0
    params_count: 2
  - items:
      - I8
      - Bool
    params_count: 1
  - items:
      - I8
      - I8
    params_count: 1
  - items:
      - I8
      - I8
      - I8
    params_count: 2
  - items:
      - F32
      - F32
    params_count: 1
  - items:
      - F32
      - F32
      - F32
    params_count: 2
  - items:
      - F32
      - I32
    params_count: 1
  - items:
      - F32
      - U32
    params_count: 1
  - items:
      - I32
      - F32
    params_count: 1
  - items:
      - U32
      - F32
    params_count: 1
  - items:
      - F32
      - F64
    params_count: 1
  - items:
      - F32
      - I64
    params_count: 1
  - items:
      - F32
      - U64
    params_count: 1
  - items:
      - F64
      - F64
    params_count: 1
  - items:
      - F64
      - F64
      - F64
    params_count: 2
  - items:
      - F64
      - I64
    params_count: 1
  - items:
      - F64
      - U64
    params_count: 1
  - items:
      - I64
      - F64
    params_count: 1
  - items:
      - U64
      - F64
    params_count: 1
  - items:
      - F64
      - F32
    params_count: 1
  - items:
      - F64
      - I32
    params_count: 1
  - items:
      - F64
      - U32
    params_count: 1
  - items:
      - I32
      - F64
    params_count: 1
  - items:
      - I32
      - I32
      - I32
    params_count: 2
  - items:
      - I32
      - I32
    params_count: 1
  - items:
      - U32
      - F64
    params_count: 1
  - items:
      - U32
      - U32
      - U32
    params_count: 2
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - I64
      - F32
    params_count: 1
  - items:
      - I64
      - I64
      - I64
    params_count: 2
  - items:
      - I64
      - I64
    params_count: 1
  - items:
      - U64
      - F32
    params_count: 1
  - items:
      - U64
      - U64
      - U64
    params_count: 2
  - items:
      - U64
      - U64
    params_count: 1
  - items:
      - U8
      - U8
      - U8
    params_count: 2
  - items:
      - U8
      - U8
    params_count: 1
  - items:
      - I16
      - I16
      - I16
    params_count: 2
  - items:
      - I16
      - I16
    params_count: 1
  - items:
      - U16
      - U16
      - U16
    params_count: 2
  - items:
      - U16
      - U16
    params_count: 1
  - items:
      - Bool
      - Bool
      - Bool
    params_count: 2
  - items:
      - I32
      - Bool
    params_count: 1
  - items:
      - Bool
      - Bool
    params_count: 1
  - items:
      - I32
      - I32
      - Bool
    params_count: 2
  - items:
      - U32
      - U32
      - Bool
    params_count: 2
  - items:
      - I64
      - I64
      - Bool
    params_count: 2
  - items:
      - U64
      - U64
      - Bool
    params_count: 2
  - items:
      - I8
      - I8
      - Bool
    params_count: 2
  - items:
      - U8
      - U8
      - Bool
    params_count: 2
  - items:
      - I16
      - I16
      - Bool
    params_count: 2
  - items:
      - U16
      - U16
      - Bool
    params_count: 2
  - items:
      - F32
      - F32
      - Bool
    params_count: 2
  - items:
      - F64
      - F64
      - Bool
    params_count: 2
  - items:
      - U8
      - U8
      - I8
    params_count: 2
  - items:
      - U16
      - U16
      - I8
    params_count: 2
  - items:
      - U32
      - U32
      - I8
    params_count: 2
  - items:
      - U64
      - U64
      - I8
    params_count: 2
  - items:
      - I16
      - I16
      - I8
    params_count: 2
  - items:
      - I32
      - I32
      - I8
    params_count: 2
  - items:
      - I64
      - I64
      - I8
    params_count: 2
  - items:
      - Bool
      - Bool
      - I8
    params_count: 2
  - items:
      - U32
      - Bool
    params_count: 1
globals: []
exports:
  - Function:
      id: 670
      name: 310
imports: []
memories: []
aggregates:
  - fields:
      - ty: I32
        offset: 0
      - ty: I32
        offset: 4
    layout:
      size: 8
      align: 4
    scalars:
      entries:
        - ty: I32
          offset: 0
        - ty: I32
          offset: 4
      field_starts:
        - 0
        - 1
        - 2
    decl_to_phys:
      - 0
      - 1
static_entries: []
start_function: ~
